--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Knock Backend Node questions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com-personal:jeremymcjunkin/knock-backend-node-ex.git"
   },
   "author": "Jeremy McJunkin",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mocha": "^6.0.2"
+  }
 }
