--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jeremy McJunkin",
   "license": "ISC",
   "dependencies": {
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "request": "^2.88.0"
   }
 }
